[gd_scene load_steps=5 format=3 uid="uid://uo8qkhx3gynv"]

[ext_resource type="Script" path="res://app.gd" id="1_ha35j"]
[ext_resource type="PackedScene" uid="uid://hgcortslfy7d" path="res://input_number.tscn" id="2_p7osa"]
[ext_resource type="Texture2D" uid="uid://c5t3rch1qv5xh" path="res://icon.svg" id="3_oj23n"]
[ext_resource type="Script" path="res://draw.gd" id="4_lgx07"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="app" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ha35j")

[node name="VBoxContainer" type="VBoxContainer" parent="app"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="app/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer0" type="VBoxContainer" parent="app/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Label" type="Label" parent="app/VBoxContainer/HBoxContainer/VBoxContainer0"]
layout_mode = 2
text = "Series:"

[node name="series" type="ItemList" parent="app/VBoxContainer/HBoxContainer/VBoxContainer0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
item_count = 1
item_0/text = "Colour Strip"

[node name="btn_add" type="Button" parent="app/VBoxContainer/HBoxContainer/VBoxContainer0"]
unique_name_in_owner = true
layout_mode = 2
text = "Add"

[node name="btn_remove" type="Button" parent="app/VBoxContainer/HBoxContainer/VBoxContainer0"]
unique_name_in_owner = true
layout_mode = 2
text = "Remove"

[node name="btn_up" type="Button" parent="app/VBoxContainer/HBoxContainer/VBoxContainer0"]
unique_name_in_owner = true
layout_mode = 2
text = "Move Up"

[node name="btn_dn" type="Button" parent="app/VBoxContainer/HBoxContainer/VBoxContainer0"]
unique_name_in_owner = true
layout_mode = 2
text = "Move Down"

[node name="HSeparator" type="HSeparator" parent="app/VBoxContainer/HBoxContainer/VBoxContainer0"]
layout_mode = 2

[node name="btn_load" type="Button" parent="app/VBoxContainer/HBoxContainer/VBoxContainer0"]
unique_name_in_owner = true
layout_mode = 2
text = "Load"

[node name="btn_save" type="Button" parent="app/VBoxContainer/HBoxContainer/VBoxContainer0"]
unique_name_in_owner = true
layout_mode = 2
text = "Save
"

[node name="btn_export" type="Button" parent="app/VBoxContainer/HBoxContainer/VBoxContainer0"]
unique_name_in_owner = true
layout_mode = 2
text = "Export"

[node name="VBoxContainer4" type="VBoxContainer" parent="app/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Label" type="Label" parent="app/VBoxContainer/HBoxContainer/VBoxContainer4"]
layout_mode = 2
text = "Name:"

[node name="txt_name" type="LineEdit" parent="app/VBoxContainer/HBoxContainer/VBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label3" type="Label" parent="app/VBoxContainer/HBoxContainer/VBoxContainer4"]
layout_mode = 2
text = "Num steps:"

[node name="val_steps" parent="app/VBoxContainer/HBoxContainer/VBoxContainer4" instance=ExtResource("2_p7osa")]
unique_name_in_owner = true
layout_mode = 2
value = 3.0
min_value = 3.0
max_value = 255.0
step = 1.0
exp_edit = true

[node name="Label4" type="Label" parent="app/VBoxContainer/HBoxContainer/VBoxContainer4"]
layout_mode = 2
text = "Curve type:
"

[node name="opt_curve_type" type="OptionButton" parent="app/VBoxContainer/HBoxContainer/VBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
selected = 3
allow_reselect = true
item_count = 4
popup/item_0/text = "Bezier"
popup/item_1/text = "Quadratic"
popup/item_1/id = 1
popup/item_2/text = "Bezier Resampled"
popup/item_2/id = 2
popup/item_3/text = "Quadratic Resampled"
popup/item_3/id = 3

[node name="Label5" type="Label" parent="app/VBoxContainer/HBoxContainer/VBoxContainer4"]
layout_mode = 2
text = "Num samples:
"

[node name="val_samples" parent="app/VBoxContainer/HBoxContainer/VBoxContainer4" instance=ExtResource("2_p7osa")]
unique_name_in_owner = true
layout_mode = 2
value = 3.0
min_value = 3.0
max_value = 10000.0
step = 1.0
exp_edit = true

[node name="VBoxContainer1" type="VBoxContainer" parent="app/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="app/VBoxContainer/HBoxContainer/VBoxContainer1"]
layout_mode = 2
text = "Low value:"

[node name="pkr_low" type="ColorPicker" parent="app/VBoxContainer/HBoxContainer/VBoxContainer1"]
unique_name_in_owner = true
layout_mode = 2
edit_alpha = false
picker_shape = 3
can_add_swatches = false
hex_visible = false
presets_visible = false

[node name="VBoxContainer2" type="VBoxContainer" parent="app/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="app/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Mid value:"

[node name="pkr_mid" type="ColorPicker" parent="app/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
edit_alpha = false
picker_shape = 3
can_add_swatches = false
hex_visible = false
presets_visible = false

[node name="VBoxContainer3" type="VBoxContainer" parent="app/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="app/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "High value:"

[node name="pkr_high" type="ColorPicker" parent="app/VBoxContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
edit_alpha = false
picker_shape = 3
can_add_swatches = false
hex_visible = false
presets_visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="app/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="out" type="TextureRect" parent="app/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_oj23n")
expand_mode = 3
stretch_mode = 4
script = ExtResource("4_lgx07")

[node name="dlg_load" type="FileDialog" parent="app"]
unique_name_in_owner = true
auto_translate_mode = 1
title = "Open a File"
size = Vector2i(800, 800)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.pal")

[node name="dlg_save" type="FileDialog" parent="app"]
unique_name_in_owner = true
title = "Save Palette"
size = Vector2i(800, 800)
access = 2
filters = PackedStringArray("*.pal")

[node name="dlg_export" type="FileDialog" parent="app"]
unique_name_in_owner = true
auto_translate_mode = 1
title = "Export Palette"
size = Vector2i(800, 800)
access = 2
filters = PackedStringArray("*.png")
